logout
sample-sources/watchpoint_clients.c: In function ‘PopulateBlackListAddresses’:
sample-sources/watchpoint_clients.c:443:19: warning: unused variable ‘perms’ [-Wunused-variable]
             char* perms = strtok_r(NULL, delim, &save);
                   ^
sample-sources/watchpoint_clients.c: In function ‘TopN’:
sample-sources/watchpoint_clients.c:589:20: warning: cast from pointer to integer of different size [-Wpointer-to-int-cast]
     int metricID = (int)arg;
                    ^
sample-sources/watchpoint_clients.c: In function ‘PrintTopN’:
sample-sources/watchpoint_clients.c:631:42: warning: cast to pointer from integer of different size [-Wint-to-pointer-cast]
     hpcrun_cct_walk_node_1st(root, TopN, (void *) metricID);
                                          ^
sample-sources/watchpoint_clients.c: In function ‘IsAddressReadable’:
sample-sources/watchpoint_clients.c:1127:23: warning: unused variable ‘i’ [-Wunused-variable]
         volatile char i = *(char*)(addr);
                       ^
sample-sources/watchpoint_clients.c: In function ‘FalseSharingWPCallback’:
sample-sources/watchpoint_clients.c:1360:9: error: ‘counter’ undeclared (first use in this function)
     if((counter & 1) == 0)
         ^
sample-sources/watchpoint_clients.c:1360:9: note: each undeclared identifier is reported only once for each function it appears in
sample-sources/watchpoint_clients.c:1361:5: error: expected expression before ‘int’
     int max_thread_num = wpi->sample.first_accessing_tid;
     ^
sample-sources/watchpoint_clients.c:1362:8: error: ‘max_thread_num’ undeclared (first use in this function)
     if(max_thread_num < TD_GET(core_profile_trace_data.id))
        ^
sample-sources/watchpoint_clients.c:1368:2: warning: implicit declaration of function ‘matrix_size_set’ [-Wimplicit-function-declaration]
  matrix_size_set(max_thread_num);
  ^
sample-sources/watchpoint_clients.c:1441:2: warning: implicit declaration of function ‘inc_true_count’ [-Wimplicit-function-declaration]
  inc_true_count((uint64_t) wt->va, increment);
  ^
sample-sources/watchpoint_clients.c:1483:2: warning: implicit declaration of function ‘inc_false_count’ [-Wimplicit-function-declaration]
  inc_false_count((uint64_t) wt->va, increment);
  ^
sample-sources/watchpoint_clients.c:1410:12: warning: unused variable ‘cacheLineBaseAddress’ [-Wunused-variable]
     void * cacheLineBaseAddress = (void *) ALIGN_TO_CACHE_LINE((size_t)wt->va);    
            ^
sample-sources/watchpoint_clients.c: In function ‘OnSample’:
sample-sources/watchpoint_clients.c:2350:24: warning: initialization makes pointer from integer without a cast [-Wint-conversion]
     void * data_addr = mmap_data->addr;
                        ^
sample-sources/watchpoint_clients.c:2351:24: warning: initialization makes pointer from integer without a cast [-Wint-conversion]
     void * precisePC = (mmap_data->header_misc & PERF_RECORD_MISC_EXACT_IP) ? mmap_data->ip : 0;
                        ^
sample-sources/watchpoint_clients.c: At top level:
sample-sources/watchpoint_clients.c:1060:21: warning: ‘UpdateMetrics’ defined but not used [-Wunused-function]
 static cct_node_t * UpdateMetrics(void *ctxt, cct_node_t * oldNode, void * joinNode, int checkedMetric, int foundMetric, int checkedMetricInc, int foundMetricInc){
                     ^
sample-sources/watchpoint_clients.c: In function ‘PopulateBlackListAddresses’:
sample-sources/watchpoint_clients.c:447:13: warning: ignoring return value of ‘realpath’, declared with attribute warn_unused_result [-Wunused-result]
             realpath(name, tmpname);
             ^
make[5]: *** [sample-sources/libhpcrun_o-watchpoint_clients.o] Error 1
make[5]: *** Waiting for unfinished jobs....
sample-sources/watchpoint_clients.c: In function ‘PopulateBlackListAddresses’:
sample-sources/watchpoint_clients.c:443:19: warning: unused variable ‘perms’ [-Wunused-variable]
             char* perms = strtok_r(NULL, delim, &save);
                   ^
sample-sources/watchpoint_clients.c: In function ‘TopN’:
sample-sources/watchpoint_clients.c:589:20: warning: cast from pointer to integer of different size [-Wpointer-to-int-cast]
     int metricID = (int)arg;
                    ^
sample-sources/watchpoint_clients.c: In function ‘PrintTopN’:
sample-sources/watchpoint_clients.c:631:42: warning: cast to pointer from integer of different size [-Wint-to-pointer-cast]
     hpcrun_cct_walk_node_1st(root, TopN, (void *) metricID);
                                          ^
sample-sources/watchpoint_clients.c: In function ‘IsAddressReadable’:
sample-sources/watchpoint_clients.c:1127:23: warning: unused variable ‘i’ [-Wunused-variable]
         volatile char i = *(char*)(addr);
                       ^
sample-sources/watchpoint_clients.c: In function ‘FalseSharingWPCallback’:
sample-sources/watchpoint_clients.c:1360:9: error: ‘counter’ undeclared (first use in this function)
     if((counter & 1) == 0)
         ^
sample-sources/watchpoint_clients.c:1360:9: note: each undeclared identifier is reported only once for each function it appears in
sample-sources/watchpoint_clients.c:1361:5: error: expected expression before ‘int’
     int max_thread_num = wpi->sample.first_accessing_tid;
     ^
sample-sources/watchpoint_clients.c:1362:8: error: ‘max_thread_num’ undeclared (first use in this function)
     if(max_thread_num < TD_GET(core_profile_trace_data.id))
        ^
sample-sources/watchpoint_clients.c:1368:2: warning: implicit declaration of function ‘matrix_size_set’ [-Wimplicit-function-declaration]
  matrix_size_set(max_thread_num);
  ^
sample-sources/watchpoint_clients.c:1441:2: warning: implicit declaration of function ‘inc_true_count’ [-Wimplicit-function-declaration]
  inc_true_count((uint64_t) wt->va, increment);
  ^
sample-sources/watchpoint_clients.c:1483:2: warning: implicit declaration of function ‘inc_false_count’ [-Wimplicit-function-declaration]
  inc_false_count((uint64_t) wt->va, increment);
  ^
sample-sources/watchpoint_clients.c:1410:12: warning: unused variable ‘cacheLineBaseAddress’ [-Wunused-variable]
     void * cacheLineBaseAddress = (void *) ALIGN_TO_CACHE_LINE((size_t)wt->va);    
            ^
sample-sources/watchpoint_clients.c: In function ‘OnSample’:
sample-sources/watchpoint_clients.c:2350:24: warning: initialization makes pointer from integer without a cast [-Wint-conversion]
     void * data_addr = mmap_data->addr;
                        ^
sample-sources/watchpoint_clients.c:2351:24: warning: initialization makes pointer from integer without a cast [-Wint-conversion]
     void * precisePC = (mmap_data->header_misc & PERF_RECORD_MISC_EXACT_IP) ? mmap_data->ip : 0;
                        ^
sample-sources/watchpoint_clients.c: At top level:
sample-sources/watchpoint_clients.c:1060:21: warning: ‘UpdateMetrics’ defined but not used [-Wunused-function]
 static cct_node_t * UpdateMetrics(void *ctxt, cct_node_t * oldNode, void * joinNode, int checkedMetric, int foundMetric, int checkedMetricInc, int foundMetricInc){
                     ^
sample-sources/watchpoint_clients.c: In function ‘PopulateBlackListAddresses’:
sample-sources/watchpoint_clients.c:447:13: warning: ignoring return value of ‘realpath’, declared with attribute warn_unused_result [-Wunused-result]
             realpath(name, tmpname);
             ^
make[5]: *** [sample-sources/libhpcrun_la-watchpoint_clients.lo] Error 1
make[4]: *** [all-recursive] Error 1
make[3]: *** [all] Error 2
make[2]: *** [all-recursive] Error 1
make[1]: *** [all-recursive] Error 1
make: *** [all-recursive] Error 1
